flux/base/source-controller/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: source-controller
spec:
  egress:
  - {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: parca
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - parca
    ports:
    - protocol: TCP
      port: http-prom
  podSelector:
    matchLabels:
      app.kubernetes.io/component: source-controller
  policyTypes:
  - Egress
  - Ingress
